--- a/common/unsafe/pom.xml
+++ b/common/unsafe/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.spark</groupId>
-    <artifactId>spark-parent_2.11-streaming</artifactId>
-    <version>2.4.1-kylin-r53</version>
+    <artifactId>spark-parent_2.11</artifactId>
+    <version>2.4.1-kylin-r53-streaming</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
